examples/failing/UIntOutOfRange.purs
-- @shouldFailWith IntOutOfRange

module Main where

n :: UInt
n = 4294967296u
